# advent-of-code

./: README.md
2020/: README.md
2020/day1/: Expense_Report.py
2020/day10/: Adapter_Array.py
2020/day2/: Corrupt_Password.py
2020/day3/: Toboggan_trajectory.py
2020/day4/: Passport_Processing.py
2020/day5/: Binary_Boarding.py
2020/day6/: Custom_Customs.py
2020/day7/: Cleaner_solution.py  HandyHaversacks.py
2020/day8/: Handheld_Halting.py
2020/day9/: Encoding_Error.py
2022/: Cargo.toml  main.rs
2022/completed/: day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
day-manager/: Cargo.toml  README.txt  advent_of_code_template.rs  main.rs
day-manager/test/: test_main.rs
util/: Cargo.toml
util/src/: backup  lib.rs
util/src/cardinal_direction/: mod.rs
util/src/parser/: mod.rs
util/src/parser/equation/: mod.rs
util/src/util/: mod.rs
