[package]
name = "AdventOfCode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vector-map = "1.0.1"
itertools = "^0.9.0"
regex = "^1.7.0"
bitmaps = "^3.2.0"
util = {path = "../util", version = "0.1.0"}

[[bin]]
name = "test"
path = "/home/ddr/Repos/advent-of-code/2022/main.rs"
